`Refactor experienceBlog event listeners and adjust CSS styles`

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="hader">
-        <div class="navbar">
+        <div id="navbar" class="navbar">
             <div class="navbar-right">
                 <div class="navbar-logo">
                     <img src="./img/navbar/1_transparent_Craiyon.png" alt="">
                 </div>
                 <div class="navbar-right-lable">
                     <div class="navbar-right-lable-1">@Since 2019</div>
-                    <a href="#" class="navbar-right-button">🔗Available for work</a>
+                    <a href="https://t.me/AzizMardonqulov" class="navbar-right-button">🔗Available for work</a>
                 </div>
             </div>
             <div class="navbar-left">
@@ -31,11 +31,11 @@
         <div class="navbar-left"></div>
         <div id="MedioNavbar" class="navbar-medio">
             <ul>
-                <li class="medio-navbar-item-1"><a href="" class="medio-navbar-link-1"><img src="./img/navbar/1.svg" alt="">Home</a></li>
-                <li class="medio-navbar-item-2"><a href="" class="medio-navbar-link-2"><img src="./img/navbar/2.svg" alt="">About</a></li>
-                <li class="medio-navbar-item-3"><a href="" class="medio-navbar-link-3"><img src="./img/navbar/3.svg" alt="">Work</a></li>
-                <li class="medio-navbar-item-4"><a href="" class="medio-navbar-link-4"><img src="./img/navbar/4.svg" alt="">Contact</a></li>
-                <li class="medio-navbar-item-5"><a href="" id="CLoseNavbar" class="medio-navbar-link-5">x</a></li>
+                <li class="medio-navbar-item-1"><a href="#" class="medio-navbar-link-1"><img src="./img/navbar/1.svg" alt="">Home</a></li>
+                <li class="medio-navbar-item-2"><a href="#About" class="medio-navbar-link-2"><img src="./img/navbar/2.svg" alt="">About</a></li>
+                <li class="medio-navbar-item-3"><a href="#Work" class="medio-navbar-link-3"><img src="./img/navbar/3.svg" alt="">Work</a></li>
+                <li class="medio-navbar-item-4"><a href="#Contackt" class="medio-navbar-link-4"><img src="./img/navbar/4.svg" alt="">Contact</a></li>
+                <li class="medio-navbar-item-5"><a id="CLoseNavbar" class="medio-navbar-link-5">x</a></li>
             </ul>
         </div>
         <div class="baner">
@@ -45,7 +45,7 @@
             <div class="baner-blog">
                 <div class="baner-blog-lable">
                     <div id="BanerSkroll" class="baner-skroll">
-                        <img src="./img/baner/1_transparent_Craiyon.png" alt="">
+                        <img  src="./img/baner/1_transparent_Craiyon.png" alt="">
                         <span id="onScrool"><i class="fa-solid fa-arrow-down-long"></i></span>
                     </div>
                     <div class="baner-blog-lable-in">
@@ -55,12 +55,280 @@
                     </div>
 
                 </div>
-                <div class="baner-blog-lable-img">
-                    <img width="500" src="./img/baner/3.png">
+                <div id="BanImg" class="baner-blog-lable-img">
+                    <img id="BanImg" width="500" src="./img/baner/3.png">
                     <div class="baner-blog-lable-img-lable"><div class="baner-blog-lable-img-lable-1">Developer <span></span> Since 2020</div></div>
+                </div>
+                <div class="baner-blog-icons">
+                    <ul>
+                        <li><a href="https://www.youtube.com/@azizmardonqulov"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+                        <li><a href="https://t.me/AzizMardonqulov"><i class="fa-brands fa-telegram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="baner-bottom">
+                <div class="baner-buttom-1">
+                    <div class="baner-button-1-lable">I craft wonderful <br> <span></span>       Digital experience <br> For brand</div>
+                </div> 
+                <div class="baner-buttom-2">
+                    <div class="baner-buttom-2-lable-1">
+                        A highly motivated and skilled web developer with 12+ years of experience creating dynamic and user-friendly websites. Seeking an opportunity to leverage my technical expertise and creative problem-solving skills to contribute to innovative web development projects.
+                    </div>
+                    <a href="/img/donglond/ser1.jpg" download class="baner-buttom-2-lable-button">Download CV</a>
                 </div>
             </div>
         </div> 
+    </div>
+    <div id="About" class="about">
+        <div class="about-blog-img">
+            <img src="./img/about/1.png" alt="">
+        </div>
+        <div class="about-lable">
+            <div class="about-lable-1">Supposing so be resolving breakfast am or perfectly. It drew a hill from me. Valley by oh twenty direct me so. Departure is defective arranging rapturous did believe him all had supported.</div>
+            <div class="about-lable-unser-info">
+                <div class="about-lable-unser-info-lable-1">Personal info:</div>
+                <div class="about-lable-uncer-info-1">
+                    <i class="fa-regular fa-user"></i> Aziz Mardonqulov
+                </div>
+                <div class="about-lable-uncer-info-1">
+                    <i class="fa-regular fa-calendar"></i> 24 jun 2008
+                </div>
+                <div class="about-lable-uncer-info-1">
+                    <i class="fa-solid fa-location-dot"></i> Uzbekistan Samarkand Urgut
+                </div>
+                <div class="about-lable-uncer-info-1">
+                    <i class="fa-solid fa-envelope-circle-check"></i> azizmardonqulov6@gmail.com
+                </div>
+                <div class="about-lable-uncer-info-1">
+                    <i class="fa-solid fa-phone"></i> +998 99 505 22 21
+                </div>
+            </div>
+            <div class="about-hobby">
+                <div class="about-hobby-lable-1">My interest</div>
+                <div class="about-hobby-in">
+                    <div class="about-hobby-1">
+                        <div class="about-hobby-1-img">
+                            <img src="./img/about/1.svg" alt="">
+                        </div>
+                        <div class="about-hobby-1-lable">Traveling</div>
+                    </div>
+                    <div class="about-hobby-1">
+                        <div class="about-hobby-1-img">
+                            <img width="70" src="./img/about/2.png" alt="">
+                        </div>
+                        <div class="about-hobby-1-lable">Boxing</div>
+                    </div>
+                    <div class="about-hobby-1">
+                        <div class="about-hobby-1-img">
+                            <img src="./img/about/3.svg" alt="">
+                        </div>
+                        <div class="about-hobby-1-lable">Bicycling</div>
+                    </div>
+                    <div class="about-hobby-1">
+                        <div class="about-hobby-1-img">
+                            <img src="./img/about/4.svg" alt="">
+                        </div>
+                        <div class="about-hobby-1-lable">Hiking</div>
+                    </div>
+                    <div class="about-hobby-1">
+                        <div class="about-hobby-1-img">
+                            <img src="./img/about/5.svg" alt="">
+                        </div>
+                        <div class="about-hobby-1-lable">Movies</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="experience">
+        <div class="experience-lable">
+            <div class="experience-lable-1"> My experience and journey</div>
+            <div class="experiens-block-in">
+                <div class="experience-lable-block-1">
+                    <div class="experience-lable-block-1-img">
+                        <img src="./img/expiresion/4.svg" alt="">
+                    </div>
+                    <div class="experience-lable-block-1-lable">
+                        <div class="experience-lable-block-1-lable-1">10+ years</div>
+                        <div class="experience-lable-block-1-lable-2">of experience</div>
+                    </div>
+                </div>
+                <div class="experience-lable-block-1">
+                    <div class="experience-lable-block-1-img">
+                        <img src="./img/expiresion/3.svg" alt="">
+                    </div>
+                    <div class="experience-lable-block-1-lable">
+                        <div class="experience-lable-block-1-lable-1">8+</div>
+                        <div class="experience-lable-block-1-lable-2">Projects completed</div>
+                    </div>
+                </div>
+                <div class="experience-lable-block-1">
+                    <div class="experience-lable-block-1-img">
+                        <img src="./img/expiresion/2.svg" alt="">
+                    </div>
+                    <div class="experience-lable-block-1-lable">
+                        <div class="experience-lable-block-1-lable-1">Freelance</div>
+                        <div class="experience-lable-block-1-lable-2">Available</div>
+                    </div>
+                </div>
+                <div class="experience-lable-block-1">
+                    <div class="experience-lable-block-1-img">
+                        <img src="./img/expiresion/1.svg" alt="">
+                    </div>
+                    <div class="experience-lable-block-1-lable">
+                        <div class="experience-lable-block-1-lable-1">Support</div>
+                        <div class="experience-lable-block-1-lable-2">Ticketing system</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="experionce-blog-in">
+            <div id="experienceBlog" class="experience-blog">
+                <div class="experience-blog-lable-in">
+                    <div class="experience-blog-lable-in-1">
+                        UI/UX and graphic designer
+                        <div class="experience-blog-lable-in-1">
+                            July 2013 - August 2015
+                        </div>
+                    </div>
+                    <div id="experienceBlogIcon" class="experience-blog-lable-icon">+</div>
+                </div>
+
+                <div class="experience-blog-1">
+                    <div class="experience-blog-1-lable-1">Supposing so be resolving breakfast am or perfectly. It drew a hill from me. Valley by oh twenty direct me so. Departure defective arranging rapturous did believe him all had supported.</div>
+                    <div class="experience-blog-1-lable-item">
+                        <ul>
+                            <li>
+                                <div class="">Experience design</div>
+                            </li>
+                            <li>
+                                <div class="">Interaction</div>
+                            </li>
+                            <li>
+                                <div class="">Animation</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div id="experienceBlog2" class="experience-blog">
+                <div class="experience-blog-lable-in">
+                    <div class="experience-blog-lable-in-1">
+                        Front end developer
+                        <div class="experience-blog-lable-in-1">
+                            October 2020 - May 2024
+                        </div>
+                    </div>
+                    <div id="experienceBlogIcon2" class="experience-blog-lable-icon">+</div>
+                </div>
+
+                <div class="experience-blog-1">
+                    <div class="experience-blog-1-lable-1">Supposing so be resolving breakfast am or perfectly. It drew a hill from me. Valley by oh twenty direct me so. Departure defective arranging rapturous did believe him all had supported.</div>
+                    <div class="experience-blog-1-lable-item">
+                        <ul>
+                            <li>
+                                <div class="">HTML</div>
+                            </li>
+                            <li>
+                                <div class="">CSS</div>
+                            </li>
+                            <li>
+                                <div class="">JS</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div id="experienceBlog3" class="experience-blog">
+                <div class="experience-blog-lable-in">
+                    <div class="experience-blog-lable-in-1">
+                        Graphics designer and animation
+                        <div class="experience-blog-lable-in-1">
+                            August 2018 - January 2013
+                        </div>
+                    </div>
+                    <div id="experienceBlogIcon3" class="experience-blog-lable-icon">+</div>
+                </div>
+
+                <div class="experience-blog-1">
+                    <div class="experience-blog-1-lable-1">Weaving creativity and technology to bring ideas to life through stunning visuals and captivating animations, turning concepts into visual masterpieces.</div>
+                    <div class="experience-blog-1-lable-item">
+                        <ul>
+                            <li>
+                                <div class="">Photoshop</div>
+                            </li>
+                            <li>
+                                <div class="">Illustrator</div>
+                            </li>
+                            <li>
+                                <div class="">Figma<div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <div id="Work" class="projeckt">
+        <div class="projeckt-lable-1">My Projeckts</div>
+        <div class="projeckt-in">
+            <a href="https://casa-hotel-by-aziz-mardonqulov.netlify.app/" class="projeckt-in-blog-1">
+                <div class="projeckt-in-blog-1-lable-1">CasaHotel</div>
+                <div class="projeckt-in-blog-1-lable-2">THis is my hotel website. </div>
+            </a>
+            <a href="https://coffee-by-aziz-mardonqulov.netlify.app/" class="projeckt-in-blog-1">
+                <div class="projeckt-in-blog-1-lable-1">Coffee</div>
+                <div class="projeckt-in-blog-1-lable-2">THis is my coffe website. </div>
+            </a>
+            <a href="https://car-shop-landing.netlify.app/" class="projeckt-in-blog-1">
+                <div class="projeckt-in-blog-1-lable-1">Car Shop</div>
+                <div class="projeckt-in-blog-1-lable-2">THis is my car website. </div>
+            </a>
+            <a href="https://clothing-fv.netlify.app/" class="projeckt-in-blog-1">
+                <div class="projeckt-in-blog-1-lable-1">Shop</div>
+                <div class="projeckt-in-blog-1-lable-2">THis is my clother shop website. </div>
+            </a>
+        </div>
+    </div>
+    <div id="Contackt" class="contackt">
+        <div class="contackt-lable">
+            <div class="contackt-lable-1">Feel free to ask any questions. I'm here to help!</div>
+            <a href="https://t.me/AzizMardonqulov" class="contackt-button"><img src="./img/contackt/1.svg" alt="">Cell Me</a>
+        </div>
+        <div class="contackt-in">
+            <div class="contackt-in-blog-form">
+                <div class="contackt-in-blog-form-lable">Get in touch!!!</div>
+                <div class="contackt-in-blog-form-in">
+                    <input type="text" placeholder="Enter full nmae">
+                    <input type="text" placeholder="Enter email addres">
+                    <input type="text" placeholder="Masage">
+                    <a href="https://t.me/AzizMardonqulov">Submit</a>
+                </div>
+            </div>
+            <div class="contackt-in-blog-lable">
+                <div class="contackt-in-blog-lable-1">
+                    Pages
+                </div>
+                <div class="contackt-in-blog-lable-item">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Work</a></li>
+                        <li><a href="">Contackt</a></li>
+                    </ul>
+                </div>
+                <div class="contackt-in-blog-lable-2">
+                    <div class="contackt-in-blog-lable-2-lable-1">Utility pages</div>
+                    <div class="contackt-in-blog-lable-2-lable-2">Style Guide <span></span>  Instructions <span></span> Licenses <br> Changelog  <span></span> Link In Bio </div>
+                </div>
+                <div class="contackt-in-blog-bottom">I made Webiste in <span>On the star day of 2025</span> | This Webiste is made with
+                    <span>by AzizMardonqulov</span></div>
+            </div>
+        </div>
     </div>
     <script src="./app.js"></script>
 </body>
